Swagger documentation Participante
